@@ -1154,13 +1154,13 @@ Planned Disbursement Type
 Activity Scope
 
 #search_tag_unsdg_txt
-UNSDG Goals
+SDG Goals
 
 #search_tag_unsdt_txt
-UNSDG Targets
+SDG Targets
 
 #search_tag_unsdi_txt
-UNSDG Indicator
+SDG Indicator
 
 #search_button1_txt
 Explore Results
