@@ -86,133 +86,6 @@
 
 </div>
 
-#^new_graph
-<div class="wrap_recipient_country" style="padding:0 0 20px 0; border-radius:0 0 6px 6px; margin:0 auto; margin-bottom:40px;">
-	<div style="background-color:#008FFF; color:#FFF; font-size:32px; text-align:center; margin-bottom:5px;">
-		<div style="padding:20px 40px;">Where does the money come from?</div>
-		<div style="width:960px; background-color:#FFF;">
-			<div style="border-top:20px solid #008FFF; margin:0 auto; width:0; height:0; border-left:20px solid transparent; border-right:20px solid transparent;"></div>
-		</div>
-	</div>
-	<div class="sector">
-		<div class="wrap_code">
-			<span class="sector_code_text" style="max-width:initial; margin-bottom:3px; font-size:16px;">Coalition for Epidemic Preparedness Innovations</span>
-			<div><span class="sector_code">International NGO</span><span style="color:#666; margin-left:10px; font-weight:bold; font-size:16px;">176,220,000 USD</span></div>
-		</div><div class="wrap_bar">
-			<span class="sector_bar" style="width:calc(92 * 3.35px);">
-				<span class="sector_overlay" style="width:calc(92 * 3.35px); background:hsl(200,92%,50%);"></span>
-			</span><span class="sector_value">92</span>
-		</div>
-	</div>
-	<div class="sector">
-		<div class="wrap_code">
-			<span class="sector_code_text" style="max-width:initial; margin-bottom:3px; font-size:16px;">United Nations Central Emergency Response Fund (CERF)</span>
-			<div><span class="sector_code">Multilateral</span><span style="color:#666; margin-left:10px; font-weight:bold; font-size:16px;">15,000,000 USD</span></div>
-		</div><div class="wrap_bar">
-			<span class="sector_bar" style="width:calc(8 * 3.35px);">
-				<span class="sector_overlay" style="width:calc(8 * 3.35px); background:hsl(200,8%,50%);"></span>
-			</span><span class="sector_value">8</span>
-		</div>
-	</div>
-	<div class="sector">
-		<div class="wrap_code">
-			<span class="sector_code_text" style="max-width:initial; margin-bottom:3px; font-size:16px;">United Nations Industrial Development Organization (UNIDO)</span>
-			<div><span class="sector_code">International NGO</span><span style="color:#666; margin-left:10px; font-weight:bold; font-size:16px;">892,175 USD</span></div>
-		</div><div class="wrap_bar">
-			<span class="sector_bar" style="width:calc(0 * 3.35px);">
-				<span class="sector_overlay" style="width:calc(0 * 3.35px); background:hsl(200,0%,50%);"></span>
-			</span><span class="sector_value">0</span>
-		</div>
-	</div>
-	<div class="sector">
-		<div class="wrap_code">
-			<span class="sector_code_text" style="max-width:initial; margin-bottom:3px; font-size:16px;">United Nations Office for Project Services (UNOPS)</span>
-			<div><span class="sector_code">International NGO</span><span style="color:#666; margin-left:10px; font-weight:bold; font-size:16px;">2,544 USD</span></div>
-		</div><div class="wrap_bar">
-			<span class="sector_bar" style="width:calc(0 * 3.35px);">
-				<span class="sector_overlay" style="width:calc(0 * 3.35px); background:hsl(200,0%,50%);"></span>
-			</span><span class="sector_value">0</span>
-		</div>
-	</div>
-	<div style="text-align:right; margin-top:10px; margin-right:20px; font-size:12px; color:#666;">*All years in total, top 5.</div>
-</div>
-
-<div class="wrap_recipient_country" style="padding:0 0 20px 0; border-radius:0 0 6px 6px; margin:0 auto; margin-bottom:40px;">
-	<div style="background-color:#CC8030; color:#FFF; font-size:32px; text-align:center; margin-bottom:5px;">
-		<div style="padding:20px 40px;">Funding went to 1 countries</div>
-		<div style="width:960px; background-color:#FFF;">
-			<div style="border-top:20px solid #CC8030; margin:0 auto; width:0; height:0; border-left:20px solid transparent; border-right:20px solid transparent;"></div>
-		</div>
-	</div>
-	<div class="sector">
-		<div class="wrap_code">
-			<span class="sector_code_text" style="max-width:initial; margin-bottom:3px; font-size:16px;">China</span><span class="sector_code">CN</span>
-			<div><span style="color:#666; margin-left:10px; font-weight:bold; font-size:16px;">894,179,000 USD</span></div>
-		</div><div class="wrap_bar">
-			<span class="sector_bar" style="width:calc(100 * 3.35px);">
-				<span class="sector_overlay" style="width:calc(100 * 3.35px); background:hsl(31,100%,66%);"></span>
-			</span><span class="sector_value">100</span>
-		</div>
-	</div>
-	<div style="text-align:right; margin-top:10px; margin-right:20px; font-size:12px; color:#666;">*All years in total.</div>
-</div>
-
-<div class="wrap_recipient_country" style="padding:0 0 20px 0; border-radius:0 0 6px 6px; margin:0 auto; margin-bottom:40px;">
-	<div style="background-color:#01A664; color:#FFF; font-size:32px; text-align:center; margin-bottom:5px;">
-		<div style="padding:20px 40px;">Where does the money go?</div>
-		<div style="width:960px; background-color:#FFF;">
-			<div style="border-top:20px solid #01A664; margin:0 auto; width:0; height:0; border-left:20px solid transparent; border-right:20px solid transparent;"></div>
-		</div>
-	</div>
-	<div class="sector">
-		<div class="wrap_code">
-			<span class="sector_code_text" style="max-width:initial; margin-bottom:3px; font-size:16px;">Basic Health</span><span class="sector_code">122</span>
-			<div><span style="color:#666; margin-left:10px; font-weight:bold; font-size:16px;">176,220,000 USD</span></div>
-		</div><div class="wrap_bar">
-			<span class="sector_bar" style="width:calc(92 * 3.35px);">
-				<span class="sector_overlay" style="width:calc(92 * 3.35px); background:hsl(160,100%,40%);"></span>
-			</span><span class="sector_value">92</span>
-		</div>
-	</div>
-	<div class="sector">
-		<div class="wrap_code">
-			<span class="sector_code_text" style="max-width:initial; margin-bottom:3px; font-size:16px;">Emergency Response</span><span class="sector_code">720</span>
-			<div><span style="color:#666; margin-left:10px; font-weight:bold; font-size:16px;">15,000,000 USD</span></div>
-		</div><div class="wrap_bar">
-			<span class="sector_bar" style="width:calc(8 * 3.35px);">
-				<span class="sector_overlay" style="width:calc(8 * 3.35px); background:hsl(160,8%,40%);"></span>
-			</span><span class="sector_value">8</span>
-		</div>
-	</div>
-	<div class="sector">
-		<div class="wrap_code">
-			<span class="sector_code_text" style="max-width:initial; margin-bottom:3px; font-size:16px;">Industry</span><span class="sector_code">321</span>
-			<div><span style="color:#666; margin-left:10px; font-weight:bold; font-size:16px;">892,175 USD</span></div>
-		</div><div class="wrap_bar">
-			<span class="sector_bar" style="width:calc(0 * 3.35px);">
-				<span class="sector_overlay" style="width:calc(0 * 3.35px); background:hsl(160,0%,40%);"></span>
-			</span><span class="sector_value">0</span>
-		</div>
-	</div>
-	<div style="text-align:right; margin-top:10px; margin-right:20px; font-size:12px; color:#666;">*All years in total. Sectors use 3-digit OECD DAC codes.</div>
-	
-	<div class="sector_list_wrap" style="margin-top:20px;">
-		<div class="header glossary" style="font-weight:bold; color:#444; padding-bottom:5px; margin-bottom:10px;">GLOSSARY</div>
-	</div>
-	<div class="sector_list_wrap">
-		<div class="sector_list"> 
-			<span>Basic Health</span><span class="sector_list_description"></span>
-		</div>
-		<div class="sector_list"> 
-			<span>Emergency Response</span><span class="sector_list_description">An emergency is a situation which results from man made crises and/or natural disasters.</span>
-		</div>
-		<div class="sector_list"> 
-			<span>Industry</span><span class="sector_list_description"></span>
-		</div>
-	</div>
-</div>
-
-
 #^/version1-banner
 <a href="https://iatistandard.org/en/news/notice-iati-standard-version-1-is-deprecated/" target="_blank" class="banner_v1">Data on this page has been published according to version 1 of the IATI Standard, which has now been deprecated. Learn more.</a>
 
@@ -539,6 +412,9 @@
 		{_it.@vocabulary==99&&_it:/tag-vocab-99||_it:/tag-vocab-url}
 	</td>
 </tr>
+
+#^/tag-vocab-sdg
+<img src="/ctrack/art/sdg/sdg-6.svg">
 
 #^/tag-vocab-narr
 {_it./narrative&&_it:/wrap-narrative||}
